# cyber-ai-team

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  start.sh
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_communication_idempotency.py  0003_retention_indexes.py  0004_role_gaps.py  0005_memory_traces.py  0006_memory_steward_findings.py  0007_autonomous_plans.py  0008_inbound_email_messages.py  0009_company_context_snapshots.py  0010_team_activation.py  0011_orchestration_governor.py  0012_autonomous_executive_company_os.py  0013_memory_canonical_conflicts.py  0014_workflow_intents.py
backend/src/cyber_team/: cli.py  clock.py  config.py  worker.py
backend/src/cyber_team/agents/: manager.py  orchestrator.py
backend/src/cyber_team/api/: __init__.py  (+3 more)
backend/tests/: conftest.py  test_api_memory.py  test_api_operations.py  test_api_roles.py  test_api_workflows.py  test_approval_locking.py  test_auth_security.py  test_autonomous_operations.py  test_autonomous_planning.py  test_chat_auth.py  test_comms_gateway.py  test_company_context_sync.py  test_erpnext_client.py  test_executive_briefing.py  test_executive_company_os.py  test_inbound_email.py  test_integration_routes.py  test_llm_gateway.py  test_memory_canonical_conflicts.py  test_memory_fallback.py  test_memory_protocol.py  test_memory_service.py  test_memory_steward.py  test_migrations.py  test_operating_cadence_scheduler.py  test_operating_model.py  test_orchestration_governor.py  test_owner_attention_notifications.py  test_promotion_policy.py  test_readiness_evidence.py  test_retention_service.py  test_role_backlog_review.py  test_runtime_config.py  test_supervisor_review.py  test_team_activation.py  test_tool_approval_replay.py  test_tools.py  test_workflow_intents.py  test_workflow_resume.py  test_workflow_templates.py
(+132 files in other folders)
