[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-team"
version = "0.1.0"
description = "AI-powered digital company operating system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.110.0,!=0.136.3",
    "uvicorn[standard]>=0.29.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-mistralai>=0.2.0",
    "langchain-community>=0.3.0",
    "litellm>=1.40.0",
    "temporalio>=1.6.0",
    "mcp>=1.0.0",
    "mem0ai>=0.1.0",
    "qdrant-client>=1.9.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "langfuse>=2.0.0",
    "openfga-sdk>=0.3.0",
    "twilio>=9.0.0",
    "pipecat>=0.1.0",
    "asterisk-ari>=0.2.0",
    "erpnext-client>=0.1.0",
    "nextcloud-client>=0.1.0",
    "aiohttp>=3.9.0",
    "aiosmtplib>=3.0.0",
    "python-slugify>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipython>=8.0.0",
]

[project.scripts]
cyber-team = "cyber_team.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
